# mcim-sync

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt  start.py
.github/workflows/: black.yml  gitlab-sync.yml  tests.yml
config/: __init__.py  mcim.json  mongodb.json
data/: curseforge_categories.json  curseforge_files.json  curseforge_fingerprints.json  curseforge_mods.json  modrinth_categories.json  modrinth_files.json  modrinth_game_versions.json  modrinth_loaders.json  modrinth_projects.json  modrinth_versions.json  redis_data.txt
database/: __init__.py  _redis.py  mongodb.py
exceptions/: __init__.py
mcim_sync/: config.py
mcim_sync/apis/: curseforge.py  modrinth.py
mcim_sync/checker/: curseforge.py  modrinth.py
mcim_sync/cleaner/: modrinth.py
mcim_sync/database/: __init__.py  _redis.py  mongodb.py
mcim_sync/exceptions/: __init__.py
mcim_sync/fetcher/: curseforge.py  modrinth.py
mcim_sync/queues/: curseforge.py  modrinth.py
mcim_sync/sync/: curseforge.py  modrinth.py
mcim_sync/tasks/: __init__.py  curseforge.py  misc.py  modrinth.py
mcim_sync/utils/: __init__.py  constans.py  constants.py  rate_limit.py
models/: __init__.py
models/database/: curseforge.py  file_cdn.py  modrinth.py
sync/: check.py  curseforge.py  modrinth.py  queue.py  tasks.py
tests/: conftest.py  test_curseforge_sync.py  test_modrinth_sync.py  test_sync.py  test_tasks.py  test_telegram_bot.py
utils/: __init__.py
utils/loger/: __init__.py
utils/network/: __init__.py
(+8 files in other folders)
